Rather than pass around File paths as Strings, prefer passing them around as File... less error prone and makes far less assumptions about the CWD